# etf-data

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
scripts/: data.txt  generate_data.py  generate_data.sh
src/: data.cpp  data.hpp  test.cpp  test.hpp
